--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,9 +7,15 @@
     <title>Check-TACC</title>
 </head>
 <body>
-    
+
     <header>
-        <nav></nav>
+        <h1><img src="" alt="Logo-check-TACC"></h1>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
