--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -90,7 +90,18 @@
     </main>
     
     <footer>
-
+        <div class="container-fluid" style="background-color:#E89F31;">
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <img src="media/svg/logo.svg" style="height: 120px; width: 120px;">
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <h5 style="color:#FFFFFF;">Check-TACC</h5>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
