Creación de Header con actualizaciones pendientes

--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Check-TACC</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="nav-flex">
             <ul>
                 <li><a id="buscar" href="/html/busqueda.html">Búsqueda</a></li>
-                <li><a id="login" href="/html/login.html">Login</a></li>
+                <li><a id="login" href="/index.html">Login</a></li>
             </ul>
         </nav>
     </header>
