--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Frontend/css/style.css">
     <title>Login</title>
 </head>
 
 <body>
 
     <header class="header-flex">
-        <h1><img id="logo" src="/media/check tacc logo.png" alt="Logo-check-TACC"></h1>
+        <h1><img id="logo" src="/Frontend/media/check tacc logo.png" alt="Logo-check-TACC"></h1>
         <nav class="nav-flex">
             <ul>
                 <li><a id="buscar" href="/html/busqueda.html">Búsqueda</a></li>
