Se hicieron modificaciones generales: archivos html y css

--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/Frontend/css/style.css">
     <title>Login</title>
 </head>
@@ -15,8 +15,8 @@
         <h1><img id="logo" src="/Frontend/media/check tacc logo.png" alt="Logo-check-TACC"></h1>
         <nav class="nav-flex">
             <ul>
-                <li><a id="buscar" href="/html/busqueda.html">Búsqueda</a></li>
-                <li><a id="login" href="/index.html">Login</a></li>
+                <li><a id="buscar" href="/Frontend/html/busqueda.html">Búsqueda</a></li>
+                <li><a id="login" href="../index.html">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -26,8 +26,18 @@
     </main>
     
     <footer>
-
+        <div>
+            <ul>
+                <li>
+                    <img class="img-footer" src="/Frontend/media/svg/logo.svg" alt="Logo-check-TACC">
+                </li>
+                <li>
+                    <h5 class="titulo-footer">Check-TACC</h5>
+                </li>
+            </ul>
+        </div>
     </footer>
+
     <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
