--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/Frontend/css/style.css">
     <title>Check-TACC</title>
 </head>
@@ -12,16 +12,19 @@
 <body>
 
     <header class="header-flex">
+        <!-- Posibilidad: linkear al index desde el logo del header -->
         <h1><img id="logo" src="/Frontend/media/check tacc logo.png" alt="Logo-check-TACC"></h1>
         <nav class="nav-flex">
             <ul>
-                <li><a id="buscar" href="/html/busqueda.html">Búsqueda</a></li>
-                <li><a id="login" href="/html/login.html">Login</a></li>
+                <li><a id="buscar" href="/Frontend/html/busqueda.html">Búsqueda</a></li>
+                <li><a id="login" href="/Frontend/html/login.html">Login</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <h1 class="titulo-categoria">Categorías</h1>
+
         <div class="container">
             <div class="row align-items-center mb-3">
                 <div class="col-6 col-lg-3">
@@ -91,24 +94,71 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- Agregué 4 categorías más, pendiente modificar imágenes -->
+                <div class="col-6 col-lg-3">
+                    <div class="card mb-3">
+                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <div class="card-body">
+                            <h5 class="card-title">Cuidado personal</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="card mb-3">
+                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <div class="card-body">
+                            <h5 class="card-title">Cuidado personal</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="card mb-3">
+                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <div class="card-body">
+                            <h5 class="card-title">Cuidado personal</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="card mb-3">
+                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <div class="card-body">
+                            <h5 class="card-title">Cuidado personal</h5>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             </div>
         </div>
     </main>
     
+    <!-- Cambio del footer, sin bootstrap -->
     <footer>
-        <div class="container-fluid" style="background-color:#E89F31;">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <img src="media/svg/logo.svg" style="height: 120px; width: 120px;">
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <h5 style="color:#FFFFFF;">Check-TACC</h5>
-                </div>
-            </div>
+        <div>
+            <ul>
+                <li>
+                    <img class="img-footer" src="media/svg/logo.svg" alt="Logo-check-TACC">
+                </li>
+                <li>
+                    <h5 class="titulo-footer">Check-TACC</h5>
+                </li>
+            </ul>
         </div>
+
+        <!-- <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <img class="img-footer" src="media/svg/logo.svg"">
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <h5 class="titulo-footer">Check-TACC</h5>
+                </div>
+            </div>
+        </div> -->
     </footer>
     <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
