Actualización del index

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -39,7 +39,7 @@
                     <div class="card mb-3">
                         <img src="media/png/categoria-bebidas.png" class="card-img-top" href="#">
                         <div class="card-body">
-                            <h5 class="card-title">Bebidas</h5>
+                            <h5 class="card-title">Aderezos</h5>
                         </div>
                     </div>
                 </div>
@@ -88,35 +88,35 @@
                 </div>
                 <div class="col-6 col-lg-3">
                     <div class="card mb-3">
-                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <img src="media/jpg/conservas.jpg" class="card-img-top" href="#">
                         <div class="card-body">
-                            <h5 class="card-title">Cuidado personal</h5>
+                            <h5 class="card-title">Conservas</h5>
                         </div>
                     </div>
                 </div>
                 
-                <!-- Agregué 4 categorías más, pendiente modificar imágenes -->
+                <!-- Agregué 4 categorías más!  -->
                 <div class="col-6 col-lg-3">
                     <div class="card mb-3">
-                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <img src="media/jpg/bombones.jpg" class="card-img-top" href="#">
                         <div class="card-body">
-                            <h5 class="card-title">Cuidado personal</h5>
+                            <h5 class="card-title">Bombones</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-lg-3">
                     <div class="card mb-3">
-                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <img src="media/jpg/yerbamate.jpg" class="card-img-top" href="#">
                         <div class="card-body">
-                            <h5 class="card-title">Cuidado personal</h5>
+                            <h5 class="card-title">Yerba mate</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-lg-3">
                     <div class="card mb-3">
-                        <img src="media/png/categoria-cuidado.png" class="card-img-top" href="#">
+                        <img src="media/jpg/confituras.jpg" class="card-img-top" href="#">
                         <div class="card-body">
-                            <h5 class="card-title">Cuidado personal</h5>
+                            <h5 class="card-title">Confituras</h5>
                         </div>
                     </div>
                 </div>
